workspace-sf/force-app/main/default/objects/OpcaoInformacao__c/OpcaoInformacao__c.object-meta.xml
<CustomObject>
    <label>Opção de Informação</label>
    <nameField>
        <label>Nome da Opção do Portal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opção de Informação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>