workspace-sf/force-app/main/default/objects/OpcaoInformacao__c/fields/InformacaoOferta__c.field-meta.xml
<CustomField>
    <fullName>InformacaoOferta__c</fullName>
    <label>Informação da Oferta</label>
    <referenceTo>InformacaoOferta__c</referenceTo>
    <relationshipLabel>Opção de Informação</relationshipLabel>
    <relationshipName>OpcaoInformacao</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>