workspace-sf/force-app/main/default/objects/OpcaoInformacao__c/fields/Ordem__c.field-meta.xml
<CustomField>
    <fullName>Ordem__c</fullName>
    <label>Ordem</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>