workspace-sf/force-app/main/default/objects/OpcaoInformacao__c/listViews/Filtrado.listView-meta.xml
<ListView>
    <fullName>Filtrado</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>InformacaoOferta__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InformacaoOferta__c</field>
        <operation>equals</operation>
    </filters>
    <label>Filtrado</label>
</ListView>